Update and rename config.env.default to config.env

--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 # To see all variables please see 'config.env' file
 # copy the variables you want from 'config.env' and add to the end of this file
 
-USER_SECRET=      # 32 hex secret for user
-MAIN_DOMAIN=      # a subdomain or main domain that is pointed to your server
+USER_SECRET=6644AF9B38C2B5C1760EEF33403B0E8F 
+MAIN_DOMAIN=localhost
 
 
 # Optional:
